--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -955,3 +955,57 @@ input[type="submit"] {
     }
 }
 
+/*---------------------
+------- REPORTS -------
+-----------------------*/
+.filters-title {
+    text-align: left !important;
+    padding-left: 1rem;
+}
+
+@media (min-width: 1024px) {
+    .filters-title {
+        padding: unset;
+    }
+}
+
+.search-buttons {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 1rem;
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .search-grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: .5rem;
+    }
+
+    .search-grid .input:nth-child(1) {
+        grid-column: 1 / 3;
+    }
+
+    .search-buttons {
+        grid-column: 2 / 3;
+    }
+}
+
+@media (min-width: 1024px) {
+    .search-grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 1rem;
+    }
+
+    .search-grid .input input,
+    .search-grid .input select {
+        margin: unset;
+        margin: 2rem 0;
+    }
+
+    .search-buttons {
+        grid-column: 3 / 4;
+        margin: 0;
+    }
+}
