--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -446,6 +446,8 @@ input[type="submit"] {
 
     .btn-back {
         font-size: 1.43rem;
+        width: 50%; 
+        margin: 0 auto;
     }
 }
 
@@ -1018,4 +1020,36 @@ input[type="submit"] {
         grid-column: 3 / 4;
         margin: 0;
     }
+}
+
+@media (min-width: 1024px) {
+    .mobile-display {
+        display: none;
+    }
+}
+
+@media (min-width: 0px) and (max-width: 768px) {
+    .tablet-display {
+        display: none;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .tablet-display {
+        display: table-cell;
+    }
+}
+
+@media (max-width: 1024px) {
+    .desktop-display {
+        display: none;
+    }
+}
+
+.report-actions {
+    display: inline-block;
+}
+
+.report-actions a:nth-child(2) {
+    margin-bottom: .2rem;
 }
