--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -57,11 +57,11 @@
         <% end %>
         <p>
           <strong>Edificio:</strong>
-          <%= request.work_location.work_building.name %>
+          <%= request.request_location.work_building.name %>
         </p>
         <p>
           <strong>Lugar del trabajo a realizar:</strong>
-          <%= request.work_location.name %>
+          <%= request.request_location.name %>
         </p>
         <p>
           <strong>Tipo de trabajo a realizar:</strong>
